fixed ui issues on mobile view

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -146,10 +146,16 @@ a:not(.underlined):visited {
     transition: all 0.4s ease-in-out;
 }
 .section-hero.banner-2 {
+    min-height: 580px;
     background: url('https://s3-ap-southeast-2.amazonaws.com/cloudmall-webassets/fitmycar/event+pages/gift+ideas+landing+page/1920x580_car-gifts-banner2.jpg') center center no-repeat;
+    background-size: cover;
+    transition: all 0.4s ease-in-out;
 }
 .section-hero.banner-3 {
+    min-height: 580px;
     background: url('https://s3-ap-southeast-2.amazonaws.com/cloudmall-webassets/fitmycar/event+pages/gift+ideas+landing+page/1920x580_car-gifts-banner3.jpg') center center no-repeat;
+    background-size: cover;
+    transition: all 0.4s ease-in-out;
 }
 /* Hero Header */
 .hero-santa-hat {
@@ -228,6 +234,16 @@ a:not(.underlined):visited {
     padding: 25px 25px;
     position: relative;
     display: inline-block;
+}
+
+.features-content .fa {
+    color: #fff;
+    position: relative;
+    display: inline-block;
+    float: left;
+    top: 1px;
+    margin-right: 10px;
+    font-size: 20px;
 }
 .features-content p {
     color: #E9F5FF;
@@ -385,6 +401,11 @@ a:not(.underlined):visited {
     height: 100%;
     padding: 0 15px;
     margin: 15px 0 !important;
+}
+.regift-product-galleries .product-item-container:nth-child(2n+1) {
+    content: "";
+    clear: both;
+    display: table;
 }
 .product-item-img {
     position: relative;
@@ -1017,8 +1038,8 @@ a:not(.underlined):visited {
         margin-right: 15px;
     }
     .header-icons i {
-        font-size: 35px;
-        padding: 22px 12px;
+        font-size: 27px;
+        padding: 22px 5px;
         color: #437ac7;
         cursor: pointer;
     }
@@ -1064,13 +1085,13 @@ a:not(.underlined):visited {
         border-left: 2px solid rgba(153, 212, 255, 0.33);
     }
     /* TOP FEATURES SECTION */
-    .features-content {
-        width: 50%;
-        float: left;
+    .features-container {
+        padding: 15px 0;
     }
     .features-content p {
         text-align: left;
     }
+    /* REGIFT SECTION */
     .regift-container {
         width: 85%;
     }
@@ -1099,6 +1120,7 @@ a:not(.underlined):visited {
     .section-regift-contents .col-sm-4:last-child {
         border-bottom: 1px solid #eaeaea;
     }
+    /* SUPPORT AND FEATURES SECTION */
     .support-n-features-container {
         width: 100%;
         margin: 0 auto;
@@ -1118,6 +1140,7 @@ a:not(.underlined):visited {
         width: 100%;
         margin-bottom: 30px;
     }
+    /* MAIN FEATURES SECTION */
     .main-features-container {
         margin-top: 50px;
     }
@@ -1129,6 +1152,7 @@ a:not(.underlined):visited {
         clear: both;
         display: table;
     }
+    /* AWARDEE SECTION */
     .section-awardee {
         padding-top: 60px;
     }
@@ -1202,6 +1226,7 @@ a:not(.underlined):visited {
 /* MOBILE VIEW (CUSTOM)
 /* --------------------------------------------- */
 @media screen and (min-width: 578px) and (max-width: 767px) {
+    /* HERO SECTION */
     .hero-header {
         width: 595px;
     }
@@ -1211,8 +1236,15 @@ a:not(.underlined):visited {
     .hero-subheader-texts {
         left: 35px;
     }
+    /* TOP FEATURES SECTION */
+    .features-content {
+        width: 50%;
+        float: left;
+        padding: 12px 15px;
+    }
 }
 @media screen and (min-width: 370px) and (max-width: 577px) {
+    /* HERO SECTION */
     .hero-header {
         width: 400px;
     }
@@ -1258,11 +1290,68 @@ a:not(.underlined):visited {
         border-width: 41px;
         border-color: #ff3b3bde transparent #ff3b3bde  #ff3b3bde;
     }
+    /* TOP FEATURES SECTION */
     .main-features-title {
         margin-top: 0;
     }
+    .features-content {
+        width: 100%;
+        float: left;
+        padding: 12px 15px;
+    }
+    /* REGIFT CONTENTS SECTION */
+    .regift-product-galleries .product-item-container {
+        width: 80%;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+}
+@media screen and (max-width: 577px) {
+    /* TOP FEATURES SECTION */
+    .main-features-item {
+        width: 100%;
+    }
+    .main-features-title {
+        margin-top: 0;
+    }
+    /* REGIFT CONTENTS SECTION */
+    .regift-category-headers .product-item-container {
+        height: unset;
+        margin: 0 !important;
+        width: 70%;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    .regift-category-headers .product-item-img {
+        top: 0;
+        transform: none;
+    }
+    .product-item-info {
+        top: 0;
+        transform: none;
+    }
+    .col-sm-4:nth-child(2) .regift-category-headers .product-item-info,
+    .col-sm-4:nth-child(3) .regift-category-headers .product-item-info {
+        margin-top: 30px;
+    }
+    .regift-category-headers {
+        height: unset;
+    }
+    .product-item-info span {
+        text-align: center !important;
+    }
+    .category-header-desc-2 {
+        width: 100%;
+        position: relative;
+        display: block;
+    }
+    /* VEHICLE SEARCH SECTION */
+    .find-vehicle-btn {
+        width: 70%;
+    }
 }
 @media screen and (max-width: 370px) {
+    /* HEADER */
     .navbar-brand {
         padding: 21px 15px;
     }
@@ -1276,6 +1365,7 @@ a:not(.underlined):visited {
         font-size: 25px;
         padding: 27px 5px;
     }
+    /* HERO SECTION */
     .hero-header h1 {
         font-size: 45px;
         padding: 0 20px;
@@ -1308,25 +1398,23 @@ a:not(.underlined):visited {
     }
     .hero-subheader-texts:nth-child(1) h3:before,
     .hero-subheader-texts:nth-child(1) h3:after {
-        content: " ";
+        content: "";
     }
-    .main-features-title {
-        margin-top: 0;
-    }
-}
-@media screen and (max-width: 320px) {
-    .main-features-item {
+    .features-content {
         width: 100%;
+        float: left;
+        padding: 12px 15px;
     }
-    .find-vehicle-btn {
+    /* REGIFT CONTENTS SECTION */
+    .regift-product-galleries .product-item-container {
+        width: 80%;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    .regift-category-headers .product-item-container {
         width: 80%;
     }
-    .main-features-title {
-        margin-top: 0;
-    }
 }
-
-
 
 /* --------------------------------------------- */
 /* CSS3 ANIMATIONS
